Fix: project refactored. Added initialize module. Fixed connection to and manipulation with database.

--- a/app/src/.env
+++ b/app/src/.env
@@ -1,7 +1,1 @@
-DB_HOST=localhost
-DB_USER=postgres
-DB_PASSWORD=4hf83b
-DB_NAME=test_trudion
-DB_PORT=5432
-DB_SSLMODE=disable
-DB_TIMEZONE=Europe/Moscow
+DB_CONFIG="host=localhost user=postgres password=4hf83b dbname=test_trudion port=5432 sslmode=disable TimeZone=Europe/Moscow"
