Add: port variable

--- a/app/src/.env
+++ b/app/src/.env
@@ -1,1 +1,2 @@
 DB_CONFIG="host=localhost user=postgres password=4hf83b dbname=test_trudion port=5432 sslmode=disable TimeZone=Europe/Moscow"
+PORT=8080
