Upd: register handle refactored

--- a/app/src/.env
+++ b/app/src/.env
@@ -1,2 +1,3 @@
 DB_CONFIG="host=localhost user=postgres password=4hf83b dbname=test_trudion port=5432 sslmode=disable TimeZone=Europe/Moscow"
 PORT=8080
+SECRET_KEY="b0nN_4;>-dj!PCtIYdqw0`C1&Uw;gS"
