--- a/app/src/.env
+++ b/app/src/.env
@@ -1,3 +1,3 @@
-DB_CONFIG="host=localhost user=postgres password=4730 dbname=test_trudion port=5432 sslmode=disable TimeZone=Europe/Moscow"
+DB_CONFIG="host=host.docker.internal user=postgres password=4730 dbname=test_trudion port=5432 sslmode=disable TimeZone=Europe/Moscow"
 PORT=8080
 SECRET_KEY="b0nN_4;>-dj!PCtIYdqw0`C1&Uw;gS"
