--- a/app/src/.env.example
+++ b/app/src/.env.example
@@ -1,4 +1,3 @@
-DB_CONFIG="host=host.docker.internal user=postgres password=4hf83c dbname=test_trudion port=5432 sslmode=disable TimeZone=Europe/Moscow"
-#DB_CONFIG="host=localhost user=postgres password=4hf83c dbname=test_trudion port=5432 sslmode=disable TimeZone=Europe/Moscow"
-PORT=8080
-SECRET_KEY="b0nN_4;>-dj!PCtIYdqw0`C1&Uw;gS"
+DB_CONFIG="host=host user=user password=password dbname=dbname port=port sslmode=disable TimeZone=Europe/Moscow"
+PORT=PORT
+SECRET_KEY="SECRET_KEY"
