--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -6,7 +6,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Install deps
+      - name: Install dependencies
+        working-directory: app/frontend
         run: npm ci
       - name: Lint
+        working-directory: app/frontend
         run: npm run lint
