--- a/.github/workflows/lint_backend.yml
+++ b/.github/workflows/lint_backend.yml
@@ -14,7 +14,7 @@ jobs:
 
       - name: lint
         run: |
-          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.26.0
-          golangci-lint run
-#          go get -u golang.org/x/lint/golint
-#          golint ./...
+#          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.26.0
+#          golangci-lint run
+          go get -u golang.org/x/lint/golint
+          golint ./...
