--- a/.github/workflows/lint_backend.yml
+++ b/.github/workflows/lint_backend.yml
@@ -10,11 +10,20 @@ jobs:
       - uses: actions/setup-go@v2
         with:
           stable: 'false'
-          go-version: '1.23.4'
+          go-version: '1.21'
 
-      - name: lint
+      - name: Install dependencies
+        working-directory: app/backend
+        run: |
+          go mod tidy
+          go get github.com/swaggo/swag@latest
+
+      - name: Install GolangCI-Lint
         working-directory: app/backend
         run: |
           curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.26.0
 
-          golangci-lint run 
+      - name: Lint the project
+        working-directory: app/backend
+        run: |
+          golangci-lint run
