--- a/.github/workflows/lint_backend.yml
+++ b/.github/workflows/lint_backend.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/setup-go@v2
         with:
           stable: 'false'
-          go-version: '1.23.4'
+          go-version: '1.21'
 
       - name: Install dependencies
         working-directory: app/backend
@@ -26,4 +26,4 @@ jobs:
       - name: Lint the project
         working-directory: app/backend
         run: |
-          golangci-lint run
+          golangci-lint run --disable-all --enable vrp --enable buildssa
