--- a/.github/workflows/lint_backend.yml
+++ b/.github/workflows/lint_backend.yml
@@ -9,21 +9,13 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2
         with:
-          stable: 'false'
-          go-version: '1.21'
+          go-version: '1.23.4'
 
       - name: Install dependencies
-        working-directory: app/backend
-        run: |
-          go mod tidy
-          go get github.com/swaggo/swag@latest
+        working-directory: ./app/backend
+        run: go mod download
 
       - name: Install GolangCI-Lint
-        working-directory: app/backend
         run: |
-          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.26.0
-
-      - name: Lint the project
-        working-directory: app/backend
-        run: |
-          golangci-lint run --disable-all --enable vrp --enable goanalysis_metalinter
+          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.62.2
+          golangci-lint --version        
