--- a/.github/workflows/lint_backend.yml
+++ b/.github/workflows/lint_backend.yml
@@ -18,4 +18,7 @@ jobs:
       - name: Install GolangCI-Lint
         run: |
           curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.62.2
-          golangci-lint --version        
+          golangci-lint --version
+
+      - name: Lint
+        run: golangci-lint run ./app/backend/...
