--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -1,4 +1,4 @@
-name: Lint Backend
+name: Backend Check
 
 on: [push]
 
@@ -16,6 +16,7 @@ jobs:
         run: go mod download
 
       - name: Install GolangCI-Lint
+        working-directory: ./app/backend
         run: |
           curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.62.2
           golangci-lint --version
