--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -14,9 +14,9 @@ jobs:
           node-version: '14'
 
       - name: Install dependencies
-        working-directory: ./app/frontend
+        working-directory: app/frontend
         run: npm install
 
       - name: Lint
-        working-directory: ./app/frontend
+        working-directory: app/frontend
         run: npm run lint
