--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -6,16 +6,12 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
       - uses: actions/checkout@v4
-
-      - name: Install Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '14'
 
       - name: Install dependencies
         working-directory: app/frontend
-        run: npm install
+        run: npm ci
 
       - name: Lint
         working-directory: app/frontend
