--- a/app/backend/.env.example
+++ b/app/backend/.env.example
@@ -1,2 +1,3 @@
 DB_CONFIG="host=host user=user password=password dbname=dbname port=port sslmode=disable TimeZone=Europe/Moscow"
 PORT=PORT
+SECRET_KEY="SECRET_KEY"
